Fix Nethermind authentication

--- a/nm.yml
+++ b/nm.yml
@@ -55,6 +55,7 @@ services:
       - --JsonRpc.Port
       - ${EL_RPC_PORT}
       - --JsonRpc.JwtSecretFile=/var/lib/nethermind/jwtsecret
+      - --JsonRpc.AdditionalRpcUrls=http://0.0.0.0:8551|http;wss|engine;eth;net;web3;subscribe
       - --JsonRpc.WebSocketsPort
       - ${EL_WS_PORT}
       - --Sync.FastSync
