--- a/besu.yml
+++ b/besu.yml
@@ -60,9 +60,11 @@ services:
       - --rpc-ws-port
       - ${EL_WS_PORT}
       - --host-allowlist=*
-      - --engine-host-allowlist="*"
+      - --engine-host-allowlist=*
       - --engine-jwt-enabled=true
       - --engine-jwt-secret=/var/lib/besu/jwtsecret
+      - --engine-rpc-http-port=8551
+      - --engine-rpc-ws-port=8551
       - --logging
       - ${LOG_LEVEL}
       - --metrics-enabled
