Switch Nimbus back to ws for web3

--- a/default.env
+++ b/default.env
@@ -2,6 +2,7 @@
 COMPOSE_FILE=teku-base.yml:geth.yml
 # Execution client endpoint / chain source. This default uses the execution node container.
 # For Teku and Lighthouse, you can specify multiple endpoints separated by commas
+# This needs to be ws:// or ws:// if using Nimbus, e.g. ws://execution:8546
 EC_NODE=http://execution:8545
 # Execution client fallback nodes, for Prysm or Nimbus. Can't be empty.
 EC_FALLBACK_NODE1=http://execution:8545
