--- a/erigon/Dockerfile.source
+++ b/erigon/Dockerfile.source
@@ -1,5 +1,5 @@
 # Build Erigon in a stock Go build container
-FROM golang:1.17-alpine as builder
+FROM golang:1.18-alpine as builder
 
 # Unused, this is here to avoid build time complaints
 ARG DOCKER_TAG
@@ -36,4 +36,4 @@ COPY ./docker-entrypoint.sh /usr/local/bin/
 
 USER ${USER}
 
-ENTRYPOINT ["docker-entrypoint.sh", "erigon"]
+ENTRYPOINT ["erigon"]
