--- a/nimbus/Dockerfile.sourcegnosis
+++ b/nimbus/Dockerfile.sourcegnosis
@@ -9,8 +9,7 @@ ARG BUILD_TARGET
 RUN apt-get update && apt-get install -y build-essential git libpcre3-dev ca-certificates
 
 WORKDIR /usr/src
-RUN bash -c "git clone https://github.com/status-im/nim-beacon-chain && cd nim-beacon-chain && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && \
-	make -j$(nproc) nimbus_beacon_node && make -j$(nproc) gnosis-chain-build"
+RUN bash -c "git clone https://github.com/status-im/nim-beacon-chain && cd nim-beacon-chain && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && make -j$(nproc) gnosis-chain-build"
 
 # Pull all binaries into a second stage deploy debian container
 FROM debian:bullseye-slim
@@ -43,7 +42,7 @@ RUN adduser \
 RUN mkdir -p /var/lib/nimbus && chown ${USER}:${USER} /var/lib/nimbus && chmod 700 /var/lib/nimbus
 
 # Copy executable
-COPY --from=builder /usr/src/nim-beacon-chain/build/nimbus_beacon_node /usr/local/bin/nimbus_beacon_node
+COPY --from=builder /usr/src/nim-beacon-chain/build/nimbus_beacon_node_gnosis /usr/local/bin/nimbus_beacon_node
 # Scripts for privilege change and validator import
 COPY ./validator-import.sh /usr/local/bin/
 COPY ./docker-entrypoint.sh /usr/local/bin/
