Fix LH sync committee issue on Gnosis

--- a/lh-consensus.yml
+++ b/lh-consensus.yml
@@ -59,6 +59,8 @@ services:
       - --metrics-address
       - 0.0.0.0
       - --validator-monitor-auto
+      - --subscribe-all-subnets
+      - --import-all-attestations
     command: ${LH_RAPID_SYNC}
     labels:
       - traefik.enable=true
