Updated polygon heimdall seeds

--- a/polygon-mainnet.env
+++ b/polygon-mainnet.env
@@ -1,7 +1,7 @@
 COMPOSE_FILE=bor.yml:bor-shared.yml
 BOR_NODE_ID=COMPANY-mainnet-UNIQUEID
 HEIMDALL_ETH_RPC_URL=http://MYETHNODECONTAINER:8545
-HEIMDALL_TAG=0.2.8
+HEIMDALL_TAG=0.2.9
 BOR_TAG=0.2.14
 BOR_SRC_TAG=master
 BOR_DOCKER_FILE=Dockerfile.borbinary
@@ -32,7 +32,8 @@ DDNS_PROXY=false
 HEIMDALL_CHAIN_ID=heimdall-137
 HEIMDALL_GENESIS_URL=https://raw.githubusercontent.com/maticnetwork/launch/master/mainnet-v1/sentry/sentry/heimdall/config/genesis.json
 # See also https://polygon-logs.stakepool.dev.br/peers
-HEIMDALL_SEEDS=326eefba3045cae61bcd177a8850ef2d9f1224b3@147.182.169.141:26656,3b23b20017a6f348d329c102ddc0088f0a10a444@35.221.13.28:26656,25f5f65a09c56e9f1d2d90618aa70cd358aa68da@35.230.116.151:26656,2eadba4be3ce47ac8db0a3538cb923b57b41c927@35.199.4.13:26656,4fb1bc820088764a564d4f66bba1963d47d82329@44.232.55.71:26656,f4f605d60b8ffaaf15240564e58a81103510631c@159.203.9.164:26656
+#HEIMDALL_SEEDS=326eefba3045cae61bcd177a8850ef2d9f1224b3@147.182.169.141:26656,3b23b20017a6f348d329c102ddc0088f0a10a444@35.221.13.28:26656,25f5f65a09c56e9f1d2d90618aa70cd358aa68da@35.230.116.151:26656,2eadba4be3ce47ac8db0a3538cb923b57b41c927@35.199.4.13:26656,4fb1bc820088764a564d4f66bba1963d47d82329@44.232.55.71:26656,f4f605d60b8ffaaf15240564e58a81103510631c@159.203.9.164:26656
+HEIMDALL_SEEDS=f4f605d60b8ffaaf15240564e58a81103510631c@159.203.9.164:26656,4fb1bc820088764a564d4f66bba1963d47d82329@44.232.55.71:26656,2eadba4be3ce47ac8db0a3538cb923b57b41c927@35.199.4.13:26656,ad7bc1c45641454893c74b50357a1bd87778bb50@52.60.36.93:26656,1dcd26af9c43a9dd2035a856d37f27fd035622c8@13.51.221.221:26656,41f9896eb6a62ec68becbf1d4925ececdb726eb7@13.53.160.124:26656,902484e868c6a4bace1bb3cf4b6ba1667561b158@18.228.218.160:26656,e55dc772c8ce63035fd1fb0261da4c369fa9cf6c@52.65.134.57:26656,ef4d1d8e88e767239491a407035411f30d36f026@3.105.225.123:26656,03632361e5e076fef14989fc119faae7cce4ae60@3.36.134.67:26656,afc41bd37d549186cec915c5a4feb3071871cdc1@18.228.98.237:26656,326eefba3045cae61bcd177a8850ef2d9f1224b3@147.182.169.141:26656,3b23b20017a6f348d329c102ddc0088f0a10a444@35.221.13.28:26656,25f5f65a09c56e9f1d2d90618aa70cd358aa68da@35.230.116.151:26656
 HEIMDALL_BOR_RPC_URL=http://bor:8545
 HEIMDALL_START=https://raw.githubusercontent.com/maticnetwork/launch/master/docker/heimdall-startup.sh
 BOR_SETUP=https://raw.githubusercontent.com/maticnetwork/launch/master/mainnet-v1/sentry/sentry/bor/setup.sh
