Fix LH fee recipient VC; work around NM auth on 8545

--- a/lh-base.yml
+++ b/lh-base.yml
@@ -103,6 +103,8 @@ services:
       - --http-allow-origin
       - "*"
       - --unencrypted-http-transport
+      - --suggested-fee-recipient
+      - ${REWARDS_TO}
     depends_on:
       - consensus
   get-keyapi-token:
