--- a/lh-validator.yml
+++ b/lh-validator.yml
@@ -46,6 +46,8 @@ services:
       - --http-allow-origin
       - "*"
       - --unencrypted-http-transport
+      - --suggested-fee-recipient
+      - ${REWARDS_TO}
   get-keyapi-token:
     restart: "no"
     image: alpine:latest
