Polygon pricelimit to nix spam, spam, wonderful spam!

--- a/bor.yml
+++ b/bor.yml
@@ -131,6 +131,8 @@ services:
       - "64"
       - --txpool.globalqueue
       - "131072"
+      - --txpool.pricelimit
+      - "30000000000"
       - --maxpeers
       - "200"
       - --http
