Fix NM auth for eth,net,web3; and default NM to binary image for now, source build can't sync

--- a/default.env
+++ b/default.env
@@ -133,8 +133,8 @@ GETH_DOCKERFILE=Dockerfile.source
 
 # Nethermind
 NM_SRC_BUILD_TARGET=kiln
-NM_DOCKER_TAG=kiln_0.8
-NM_DOCKERFILE=Dockerfile.source
+NM_DOCKER_TAG=kiln_0.11
+NM_DOCKERFILE=Dockerfile.binary
 
 # Besu
 BESU_SRC_BUILD_TARGET=main
