More NM adjustments

--- a/default.env
+++ b/default.env
@@ -133,7 +133,7 @@ GETH_DOCKERFILE=Dockerfile.source
 
 # Nethermind
 NM_SRC_BUILD_TARGET=kiln
-NM_DOCKER_TAG=kiln_0.11
+NM_DOCKER_TAG=kiln_merge_sync
 NM_DOCKERFILE=Dockerfile.binary
 
 # Besu
