--- a/teku-consensus.yml
+++ b/teku-consensus.yml
@@ -52,6 +52,7 @@ services:
       - --metrics-port=8008
       - --metrics-interface=0.0.0.0
       - --metrics-host-allowlist=*
+      - --p2p-subscribe-all-subnets-enabled=true
     command: ${TEKU_RAPID_SYNC}
     labels:
       - traefik.enable=true
