Add Prometheus traefik for federation et al

--- a/default.env
+++ b/default.env
@@ -28,6 +28,7 @@ CF_API_TOKEN=SECRETTOKEN
 AWS_PROFILE=myprofile
 AWS_HOSTED_ZONE_ID=myzoneid
 GRAFANA_HOST=grafana
+PROM_HOST=prometheus
 PRYSM_HOST=prysm
 EC_HOST=ec
 EC_WS_HOST=ecws
