Switch to latest/master for Geth

--- a/default.env
+++ b/default.env
@@ -127,8 +127,8 @@ ERIGON_DOCKER_TAG=
 ERIGON_DOCKERFILE=Dockerfile.source
 
 # Go-Ethereum aka Geth
-GETH_SRC_BUILD_TARGET=merge-kiln-v2
-GETH_DOCKER_TAG=merge-87d642d
+GETH_SRC_BUILD_TARGET=master
+GETH_DOCKER_TAG=latest
 GETH_DOCKERFILE=Dockerfile.source
 
 # Nethermind
