--- a/geth/Dockerfile.source
+++ b/geth/Dockerfile.source
@@ -9,8 +9,7 @@ ARG BUILD_TARGET
 RUN apk update && apk add --no-cache make gcc musl-dev linux-headers git bash
 
 WORKDIR /src
-#RUN bash -c "git clone https://github.com/ethereum/go-ethereum.git && cd go-ethereum && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && make geth"
-RUN bash -c "git clone https://github.com/mariusvanderwijden/go-ethereum && cd go-ethereum && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && make geth"
+RUN bash -c "git clone https://github.com/ethereum/go-ethereum.git && cd go-ethereum && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && make geth"
 
 # Pull all binaries into a second stage deploy container
 FROM alpine:latest
