--- a/lh-validator.yml
+++ b/lh-validator.yml
@@ -72,6 +72,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-''}
+      - NETWORK=${NETWORK}
     entrypoint:
       - validator-import.sh
       - lighthouse
