Update client versions on Kiln

--- a/default.env
+++ b/default.env
@@ -18,7 +18,7 @@ ENR=enr:-Iq4QMCTfIMXnow27baRUb35Q8iiFHSIDBJh6hQM5Axohhf4b6Kr_cOCu0htQ5WvVqKvFgY2
 
 # Some clients suggest adjusting to higher (or lower) peer count. Adjust here, per client
 PRYSM_PEER_COUNT=45
-LH_PEER_COUNT=50
+LH_PEER_COUNT=80
 TEKU_PEER_COUNT=74
 NIM_PEER_COUNT=160
 
@@ -93,11 +93,11 @@ LOG_LEVEL=info
 # These settings are not migrated when running `./ethd update`
 
 # SSV
-SSV_NODE_TAG=latest-ubuntu
+SSV_NODE_TAG=latest
 
 # Nimbus
-NIM_SRC_BUILD_TARGET=kiln-dev-auth
-NIM_DOCKER_TAG=merge-46a13d8
+NIM_SRC_BUILD_TARGET=unstable
+NIM_DOCKER_TAG=multiarch-latest
 NIM_DOCKERFILE=Dockerfile.source
 
 # Teku
@@ -111,9 +111,9 @@ LH_DOCKER_TAG=latest-unstable
 LH_DOCKERFILE=Dockerfile.source
 
 # Prysm
-PRYSM_SRC_BUILD_TARGET=kiln
-PRYSM_DOCKER_TAG=kiln-3ea8b7
-PRYSM_VC_DOCKER_TAG=kiln-ee1ee6
+PRYSM_SRC_BUILD_TARGET=develop
+PRYSM_DOCKER_TAG=latest
+PRYSM_VC_DOCKER_TAG=latest
 PRYSM_DOCKERFILE=Dockerfile.source
 
 # Lodestar
@@ -123,7 +123,7 @@ LS_DOCKERFILE=Dockerfile.source
 
 # Erigon
 ERIGON_SRC_BUILD_TARGET=devel
-ERIGON_DOCKER_TAG=
+ERIGON_DOCKER_TAG=devel
 ERIGON_DOCKERFILE=Dockerfile.source
 
 # Go-Ethereum aka Geth
@@ -132,9 +132,9 @@ GETH_DOCKER_TAG=latest
 GETH_DOCKERFILE=Dockerfile.source
 
 # Nethermind
-NM_SRC_BUILD_TARGET=kiln
-NM_DOCKER_TAG=kiln_merge_sync
-NM_DOCKERFILE=Dockerfile.binary
+NM_SRC_BUILD_TARGET=master
+NM_DOCKER_TAG=kiln_test_sync
+NM_DOCKERFILE=Dockerfile.source
 
 # Besu
 BESU_SRC_BUILD_TARGET=main
