--- a/prysm/Dockerfile.binary
+++ b/prysm/Dockerfile.binary
@@ -1,6 +1,6 @@
 ARG DOCKER_TAG
-#FROM prysmaticlabs/prysm-beacon-chain:${DOCKER_TAG} as ccsource
-FROM gcr.io/prysmaticlabs/prysm/beacon-chain:${DOCKER_TAG} as ccsource
+FROM prysmaticlabs/prysm-beacon-chain:${DOCKER_TAG} as ccsource
+#FROM gcr.io/prysmaticlabs/prysm/beacon-chain:${DOCKER_TAG} as ccsource
 
 FROM debian:bullseye-slim as consensus
 
@@ -42,8 +42,8 @@ USER ${USER}
 
 ENTRYPOINT ["beacon-chain"]
 
-#FROM prysmaticlabs/prysm-validator:${DOCKER_TAG} as vcsource
-FROM gcr.io/prysmaticlabs/prysm/validator:${DOCKER_VC_TAG} as vcsource
+FROM prysmaticlabs/prysm-validator:${DOCKER_TAG} as vcsource
+#FROM gcr.io/prysmaticlabs/prysm/validator:${DOCKER_VC_TAG} as vcsource
 
 FROM consensus as validator
 
