--- a/nimbus/Dockerfile.binary
+++ b/nimbus/Dockerfile.binary
@@ -1,7 +1,7 @@
 ARG DOCKER_TAG
 
-#FROM statusim/nimbus-eth2:${DOCKER_TAG}
-FROM parithoshj/nimbus:${DOCKER_TAG}
+FROM statusim/nimbus-eth2:${DOCKER_TAG}
+#FROM parithoshj/nimbus:${DOCKER_TAG}
 
 # Included here to avoid build-time complaints
 ARG BUILD_TARGET
