Experimental support for Prysm rapid sync

--- a/lh-base.yml
+++ b/lh-base.yml
@@ -22,6 +22,8 @@ services:
     volumes:
       - lhbeacon-data:/var/lib/lighthouse
       - /etc/localtime:/etc/localtime:ro
+    environment:
+      - RAPID_SYNC_URL=${RAPID_SYNC_URL:-}
     ports:
       - ${CC_P2P_PORT:-9000}:${CC_P2P_PORT:-9000}/tcp
       - ${CC_P2P_PORT:-9000}:${CC_P2P_PORT:-9000}/udp
@@ -34,6 +36,7 @@ services:
           - eth2
     <<: *logging
     entrypoint:
+      - docker-entrypoint.sh
       - lighthouse
       - bn
       - --disable-upnp
@@ -61,7 +64,6 @@ services:
       - --metrics-port
       - "8008"
       - --validator-monitor-auto
-    command: ${LH_RAPID_SYNC}
   validator:
     restart: "${RESTART}"
     image: lighthouse:local
