--- a/lighthouse/Dockerfile.binary
+++ b/lighthouse/Dockerfile.binary
@@ -20,6 +20,7 @@ RUN adduser \
 
 # Create data mount point with permissions
 RUN mkdir -p /var/lib/lighthouse/beacon && chown ${USER}:${USER} /var/lib/lighthouse/beacon && chmod 700 /var/lib/lighthouse/beacon
+COPY ./docker-entrypoint.sh /usr/local/bin/
 
 ARG USER=lhvalidator
 ARG UID=10000
