--- a/lodestar/Dockerfile.source
+++ b/lodestar/Dockerfile.source
@@ -21,8 +21,9 @@ COPY --from=build /usr/app/lodestar/node_modules ./node_modules/
 COPY --from=build /usr/app/lodestar/packages ./packages
 
 
-# Scripts that handle permissions
+# Scripts 
 COPY ./validator-import.sh /usr/local/bin/
+COPY ./docker-entrypoint.sh /usr/local/bin/
 
 ARG USER=lsconsensus
 ARG UID=10002
