--- a/teku-base.yml
+++ b/teku-base.yml
@@ -24,6 +24,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - JAVA_OPTS=-XX:SoftMaxHeapSize=2g -Xmx4g
+      - RAPID_SYNC_URL=${RAPID_SYNC_URL:-}
     expose:
       - 8008/tcp
     ports:
@@ -62,7 +63,6 @@ services:
       - --validator-api-cors-origins=*
       - --validator-api-keystore-file=/var/lib/teku/teku-keyapi.keystore
       - --validator-api-keystore-password-file=/var/lib/teku/teku-keyapi.password
-    command: ${TEKU_RAPID_SYNC}
   get-keyapi-token:
     restart: "no"
     image: alpine:latest
