--- a/teku-stats.yml
+++ b/teku-stats.yml
@@ -2,4 +2,4 @@
 version: "3.4"
 services:
   consensus:
-    command: --metrics-publish-endpoint=https://beaconcha.in/api/v1/client/metrics?apikey=${BEACON_STATS_API}&machine=${BEACON_STATS_MACHINE} ${TEKU_RAPID_SYNC}
+    command: --metrics-publish-endpoint=https://beaconcha.in/api/v1/client/metrics?apikey=${BEACON_STATS_API}&machine=${BEACON_STATS_MACHINE}
