--- a/besu/Dockerfile.source
+++ b/besu/Dockerfile.source
@@ -1,5 +1,5 @@
-# Build Besu in a stock debian container
-FROM eclipse-temurin:11-jdk-focal as builder
+# Build Besu in a stock Ubuntu container
+FROM eclipse-temurin:17-jdk-focal as builder
 
 # This is here to avoid build-time complaints
 ARG DOCKER_TAG
@@ -11,7 +11,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates
 WORKDIR /usr/src
 RUN bash -c "git clone --recurse-submodules https://github.com/hyperledger/besu.git && cd besu && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && ./gradlew installDist"
 
-# Pull all binaries into a second stage deploy debian container
+# Pull all binaries into a second stage deploy Ubuntu container
 FROM eclipse-temurin:17-jre-focal
 
 ARG USER=besu
