Better interpolation for RAPID_SYNC_URL

--- a/nimbus-base.yml
+++ b/nimbus-base.yml
@@ -23,7 +23,7 @@ services:
       - nimbus-data:/var/lib/nimbus
       - /etc/localtime:/etc/localtime:ro
     environment:
-      - NIMBUS_RAPID_SYNC=${NIMBUS_RAPID_SYNC:-}
+      - RAPID_SYNC_URL=${RAPID_SYNC_URL:-''}
       - NETWORK=${NETWORK}
     expose:
       - 8008/tcp
