--- a/teku-base.yml
+++ b/teku-base.yml
@@ -24,6 +24,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - JAVA_OPTS=-XX:SoftMaxHeapSize=2g -Xmx4g
+      - RAPID_SYNC_URL=${RAPID_SYNC_URL:-''}
     expose:
       - 8008/tcp
     ports:
