--- a/blox-ssv.yml
+++ b/blox-ssv.yml
@@ -10,7 +10,7 @@ x-logging: &logging
 services:
   ssv-node:
     restart: "${RESTART}"
-    image: bloxstaking/ssv-node:${SSV_NODE_TAG:-latest-ubuntu}
+    image: bloxstaking/ssv-node:${SSV_NODE_TAG:-latest}
     user: 12000:12000
     volumes:
       - ./blox-ssv-config.yaml:/config.yaml
@@ -29,7 +29,7 @@ services:
       - ssv-node
   ssv-generate-keys:
     restart: "no"
-    image: bloxstaking/ssv-node:${SSV_NODE_TAG:-latest-ubuntu}
+    image: bloxstaking/ssv-node:${SSV_NODE_TAG:-latest}
     command: /go/bin/ssvnode generate-operator-keys
 volumes:
   ssv-data:
