--- a/geth.yml
+++ b/geth.yml
@@ -23,12 +23,8 @@ services:
       - geth-eth1-data:/var/lib/goethereum
       - /etc/localtime:/etc/localtime:ro
     ports:
-      - ${EC_P2P_PORT}:${EC_P2P_PORT}/tcp
-      - ${EC_P2P_PORT}:${EC_P2P_PORT}/udp
-    expose:
-      - ${EC_RPC_PORT}/tcp
-      - ${EC_WS_PORT}/tcp
-      - 6060/tcp
+      - ${EL_P2P_PORT:-30303}:${EL_P2P_PORT:-30303}/tcp
+      - ${EL_P2P_PORT:-30303}:${EL_P2P_PORT:-30303}/udp
     networks:
       default:
         aliases:
@@ -47,17 +43,17 @@ services:
       - --datadir
       - /var/lib/goethereum
       - --port
-      - ${EC_P2P_PORT}
+      - ${EL_P2P_PORT:-30303}
       - --http.port
-      - ${EC_RPC_PORT}
+      - ${EL_RPC_PORT:-8545}
       - --ws
       - --ws.addr
       - 0.0.0.0
       - --ws.port
-      - ${EC_WS_PORT}
+      - ${EL_WS_PORT:-8546}
       - --ws.api
       - web3,eth,net
-      - --${EC_NETWORK}
+      - --${EL_NETWORK:-goerli}
       - --metrics
       - --metrics.expensive
       - --pprof
