Rename CC to CL and EC to EL

--- a/lodestar-base.yml
+++ b/lodestar-base.yml
@@ -25,10 +25,8 @@ services:
     environment:
       - RAPID_SYNC_URL=${RAPID_SYNC_URL:-''}
     ports:
-      - ${CC_P2P_PORT:-9000}:${CC_P2P_PORT:-9000}/tcp
-      - ${CC_P2P_PORT:-9000}:${CC_P2P_PORT:-9000}/udp
-    expose:
-      - 5052/tcp
+      - ${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/tcp
+      - ${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/udp
     <<: *logging
     entrypoint:
       - docker-entrypoint.sh
@@ -45,11 +43,11 @@ services:
       - --api.rest.port
       - "5052"
       - --network.discv5.bindAddr
-      - "/ip4/0.0.0.0/udp/${CC_P2P_PORT:-9000}"
+      - "/ip4/0.0.0.0/udp/${CL_P2P_PORT:-9000}"
       - --network.localMultiaddrs
-      - "/ip4/0.0.0.0/tcp/${CC_P2P_PORT:-9000}"
+      - "/ip4/0.0.0.0/tcp/${CL_P2P_PORT:-9000}"
       - --eth1.providerUrls
-      - ${EC_NODE}
+      - ${EL_NODE:-http://execution:8545}
       - --logLevel
       - ${LOG_LEVEL}
       - --network
