--- a/el-traefik.yml
+++ b/el-traefik.yml
@@ -4,16 +4,16 @@ services:
   execution:
     labels:
       - traefik.enable=true
-      - traefik.http.routers.ec.service=ec
-      - traefik.http.routers.ec.entrypoints=websecure
-      - traefik.http.routers.ec.rule=Host(`${EC_HOST}.${DOMAIN}`)
-      - traefik.http.routers.ec.tls.certresolver=letsencrypt
-      - traefik.http.services.ec.loadbalancer.server.port=${EC_RPC_PORT}
-      - traefik.http.routers.ecws.service=ecws
-      - traefik.http.routers.ecws.entrypoints=websecure
-      - traefik.http.routers.ecws.rule=Host(`${EC_WS_HOST}.${DOMAIN}`)
-      - traefik.http.routers.ecws.tls.certresolver=letsencrypt
-      - traefik.http.services.ecws.loadbalancer.server.port=${EC_WS_PORT}
+      - traefik.http.routers.el.service=el
+      - traefik.http.routers.el.entrypoints=websecure
+      - traefik.http.routers.el.rule=Host(`${EL_HOST:-el}.${DOMAIN}`)
+      - traefik.http.routers.el.tls.certresolver=letsencrypt
+      - traefik.http.services.el.loadbalancer.server.port=${EL_RPC_PORT:-8545}
+      - traefik.http.routers.elws.service=elws
+      - traefik.http.routers.elws.entrypoints=websecure
+      - traefik.http.routers.elws.rule=Host(`${EL_WS_HOST:-elws}.${DOMAIN}`)
+      - traefik.http.routers.elws.tls.certresolver=letsencrypt
+      - traefik.http.services.elws.loadbalancer.server.port=${EL_WS_PORT:-8546}
 
   eth:
     image: tianon/true
