--- a/lh-base.yml
+++ b/lh-base.yml
@@ -25,11 +25,8 @@ services:
     environment:
       - RAPID_SYNC_URL=${RAPID_SYNC_URL:-''}
     ports:
-      - ${CC_P2P_PORT:-9000}:${CC_P2P_PORT:-9000}/tcp
-      - ${CC_P2P_PORT:-9000}:${CC_P2P_PORT:-9000}/udp
-    expose:
-      - 5052/tcp
-      - 5054/tcp
+      - ${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/tcp
+      - ${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/udp
     networks:
       default:
         aliases:
@@ -50,11 +47,11 @@ services:
       - --network
       - ${NETWORK}
       - --port
-      - ${CC_P2P_PORT:-9000}
+      - ${CL_P2P_PORT:-9000}
       - --target-peers
       - ${LH_PEER_COUNT}
       - --eth1-endpoints
-      - ${EC_NODE}
+      - ${EL_NODE:-http://execution:8545}
       - --eth1-blocks-per-log-query
       - "150"
       - --debug-level=${LOG_LEVEL}
@@ -68,8 +65,6 @@ services:
     restart: "${RESTART}"
     image: lighthouse:local
     user: lhvalidator
-    expose:
-      - 5064/tcp
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - /etc/localtime:/etc/localtime:ro
@@ -80,7 +75,7 @@ services:
       - --datadir
       - /var/lib/lighthouse
       - --beacon-nodes
-      - ${CC_NODE}
+      - ${CL_NODE:-http://consensus:5052}
       - --graffiti
       - ${GRAFFITI}
       - --network
